Implement English version with flag support and fixes

--- a/en/pages/case-study-pups-choice.html
+++ b/en/pages/case-study-pups-choice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art-Tim Case Study - Flu inty</title>
+    <title>Pup's Choice Case Study - Fluinty</title>
     <link rel="icon" type="image/png" href="../assets/favicon.png">
 
     <!-- Fonts -->
@@ -63,11 +63,11 @@
             <div class="flex items-center gap-8">
                 <a href="../index.html#case-studies"
                     class="text-sm font-medium text-gray-700 hover:text-gray-900 transition-colors flex items-center gap-2">
-                    <i data-lucide="arrow-left" class="w-4 h-4"></i> Powrót
+                    <i data-lucide="arrow-left" class="w-4 h-4"></i> Back
                 </a>
-                <a href="../en/pages/case-study-art-tim.html"
-                    class="flex items-center gap-2 transition-transform hover:scale-110" aria-label="Switch to English">
-                    <img src="../assets/flags/en.svg" alt="EN" class="w-6 h-auto rounded-sm shadow-sm">
+                <a href="../../pages/case-study-pups-choice.html"
+                    class="flex items-center gap-2 transition-transform hover:scale-110" aria-label="Switch to Polish">
+                    <img src="../../assets/flags/pl.svg" alt="PL" class="w-6 h-auto rounded-sm shadow-sm">
                 </a>
             </div>
         </div>
@@ -77,25 +77,23 @@
     <section class="relative min-h-[60vh] flex items-center justify-center pt-20 overflow-hidden">
         <div class="absolute inset-0 z-0">
             <div
-                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
+                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1583337130417-3346a1be7dee?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
             </div>
             <div class="absolute inset-0 bg-gradient-to-t from-background via-background/80 to-transparent"></div>
         </div>
 
         <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
             <div
-                class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-accent/10 border border-accent/20 mb-8 backdrop-blur-sm">
-                <span class="text-sm font-bold text-accent uppercase tracking-wider">Logistyka</span>
+                class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-primary/10 border border-primary/20 mb-8 backdrop-blur-sm">
+                <span class="text-sm font-bold text-primary uppercase tracking-wider">E-commerce / Marketing</span>
             </div>
 
             <h1 class="text-4xl md:text-6xl font-display font-bold tracking-tight mb-6 leading-tight">
-                Automatyzacja Zarządzania Flotą dla Art-Tim
+                Marketing Hyper-personalization for Pup's Choice
             </h1>
 
             <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                Dzięki zautomatyzowanemu systemowi zarządzania flotą udało się wyeliminować ryzyko kar za przegapione
-                terminy i niezgłoszone relokacje do ubezpieczyciela, zapewnić automatyczne powiadomienia o zmianach
-                lokalizacji oraz zaoszczędzić dziesiątki godzin miesięcznie.
+                Automating customer data collection and intelligent email campaigns that build loyalty.
             </p>
         </div>
     </section>
@@ -104,20 +102,20 @@
     <section class="py-12 border-y border-gray-200 bg-surface/30">
         <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
             <div>
-                <div class="text-4xl font-bold text-primary mb-2">100%</div>
-                <div class="text-sm text-gray-600">Kontroli nad flotą</div>
+                <div class="text-4xl font-bold text-primary mb-2">35%</div>
+                <div class="text-sm text-gray-600">Open Rate Increase</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-accent">Auto</div>
-                <div class="text-sm text-gray-600">Powiadomienia</div>
+                <div class="text-4xl font-bold text-accent">20%</div>
+                <div class="text-sm text-gray-600">Sales Increase</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-secondary">0</div>
-                <div class="text-sm text-gray-600">Przegapionych terminów</div>
+                <div class="text-4xl font-bold text-secondary">100%</div>
+                <div class="text-sm text-gray-600">Automation</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-gray-900">$$$</div>
-                <div class="text-sm text-gray-600">Zabezpieczone finanse</div>
+                <div class="text-4xl font-bold text-gray-900">5k+</div>
+                <div class="text-sm text-gray-600">Active Profiles</div>
             </div>
         </div>
     </section>
@@ -126,29 +124,41 @@
     <section class="py-24">
         <div class="max-w-4xl mx-auto px-6 space-y-24">
 
+            <!-- Client -->
+            <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
+                <h2 class="text-2xl font-display font-bold text-primary">About Client</h2>
+                <div>
+                    <p class="text-lg text-gray-700 leading-relaxed">
+                        Pup's Choice is a brand dedicated to ensuring every dog gets the best. They offer carefully
+                        selected products for pets, focusing on pet quality and health.
+                    </p>
+                </div>
+            </div>
+
             <!-- Challenge -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Challenge</h2>
                 <div class="space-y-6">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Brak centralnego systemu zarządzania flotą prowadził do chaosu informacyjnego i ryzyka
-                        finansowego.
+                        The company wanted to better understand their customers' and pets' needs to offer products
+                        perfectly tailored to breed, age, or dietary preferences. Standard newsletters weren't
+                        delivering expected results.
                     </p>
                     <ul class="space-y-4">
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="map-pin" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="mail-warning" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Decentralizacja</h3>
-                                <p class="text-sm text-gray-600">Trudności w śledzeniu lokalizacji i stanu pojazdów
-                                    pomiędzy oddziałami.</p>
+                                <h3 class="font-bold mb-1">Low Effectiveness</h3>
+                                <p class="text-sm text-gray-600">Mass email blasts had low open and conversion rates.
+                                </p>
                             </div>
                         </li>
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="file-warning" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="database" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Luki w Ubezpieczeniach</h3>
-                                <p class="text-sm text-gray-600">Ryzyko przeoczenia terminów ubezpieczeń i przeglądów,
-                                    grożące wysokimi karami.</p>
+                                <h3 class="font-bold mb-1">Lack of Data</h3>
+                                <p class="text-sm text-gray-600">Lack of knowledge about specific pet needs made offer
+                                    personalization impossible.</p>
                             </div>
                         </li>
                     </ul>
@@ -157,33 +167,34 @@
 
             <!-- Solution -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Rozwiązanie</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Solution</h2>
                 <div class="space-y-8">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Stworzyliśmy dedykowany system centralizujący zarządzanie flotą z automatycznymi
-                        powiadomieniami.
+                        We implemented an advanced Marketing Automation system that collects data and uses it to create
+                        personalized communication.
                     </p>
 
-                    <div class="relative border-l-2 border-accent/30 pl-8 space-y-12">
+                    <div class="relative border-l-2 border-primary/30 pl-8 space-y-12">
                         <div class="relative">
                             <span
-                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">1. Centralna Baza Danych</h3>
-                            <p class="text-gray-600">Jeden system gromadzący wszystkie informacje o pojazdach.</p>
+                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
+                            <h3 class="text-xl font-bold mb-2">1. Intelligent Surveys</h3>
+                            <p class="text-gray-600">We created interactive forms collecting detailed pet info (breed,
+                                age, allergies) in exchange for valuable tips.</p>
                         </div>
                         <div class="relative">
                             <span
-                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">2. Automatyczne Przypomnienia</h3>
-                            <p class="text-gray-600">System sam pilnuje terminów ubezpieczeń i przeglądów,
-                                wysyłając powiadomienia z wyprzedzeniem.</p>
+                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
+                            <h3 class="text-xl font-bold mb-2">2. AI Segmentation</h3>
+                            <p class="text-gray-600">The system automatically creates customer profiles and segments the
+                                database based on collected data, identifying groups with similar needs.</p>
                         </div>
                         <div class="relative">
                             <span
-                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">3. Śledzenie Relokacji</h3>
-                            <p class="text-gray-600">Każda zmiana lokalizacji pojazdu jest rejestrowana, co zapewnia
-                                pełną transparentność.</p>
+                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
+                            <h3 class="text-xl font-bold mb-2">3. Personalized Campaigns</h3>
+                            <p class="text-gray-600">The system sends 'tailor-made' emails with product recommendations,
+                                feeding tips, and purchase reminders, perfectly matched to every pet.</p>
                         </div>
                     </div>
                 </div>
@@ -191,22 +202,22 @@
 
             <!-- Results -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Rezultaty</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Results</h2>
                 <div>
-                    <div class="p-8 rounded-3xl bg-gradient-to-br from-accent/20 to-primary/20 border border-gray-200">
-                        <h3 class="text-2xl font-bold mb-6">Bezpieczeństwo i Kontrola</h3>
+                    <div class="p-8 rounded-3xl bg-gradient-to-br from-primary/20 to-accent/20 border border-gray-200">
+                        <h3 class="text-2xl font-bold mb-6">Engagement Increase</h3>
                         <div class="space-y-6">
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Kontrola nad flotą</span>
-                                <span class="text-xl font-bold text-green-600">100%</span>
+                                <span>Open Rate Increase</span>
+                                <span class="text-xl font-bold text-green-600">35%</span>
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Ryzyko kar finansowych</span>
-                                <span class="text-xl font-bold text-green-600">0%</span>
+                                <span>Sales Increase</span>
+                                <span class="text-xl font-bold text-green-600">20%</span>
                             </div>
                             <div class="flex items-center justify-between">
-                                <span>Oszczędność czasu</span>
-                                <span class="text-xl font-bold text-green-600">~40h / msc</span>
+                                <span>Customer Satisfaction Increase</span>
+                                <span class="text-xl font-bold text-green-600">80%</span>
                             </div>
                         </div>
                     </div>
@@ -221,31 +232,31 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Previous -->
-                <a href="case-study-eticod.html"
+                <a href="case-study-art-tim.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
                     <div
                         class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
                         <i data-lucide="arrow-left"
                             class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
-                        Poprzednia realizacja
+                        Previous case study
                     </div>
                     <h3
                         class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
-                        Eticod</h3>
+                        Art-Tim</h3>
                 </a>
 
                 <!-- Next -->
-                <a href="case-study-pups-choice.html"
+                <a href="case-study-viivaa.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
                     <div
                         class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
-                        Następna realizacja
+                        Next case study
                         <i data-lucide="arrow-right"
                             class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
                     </div>
                     <h3
                         class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
-                        Pup's Choice</h3>
+                        Viivaa.de</h3>
                 </a>
             </div>
         </div>
@@ -258,7 +269,7 @@
         </div>
     </footer>
 
-    <script src="../js/main.js"></script>
+    <script src="../../js/main.js"></script>
     <script>
         lucide.createIcons();
     </script>
