--- a/en/pages/case-study-viivaa.html
+++ b/en/pages/case-study-viivaa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art-Tim Case Study - Flu inty</title>
+    <title>Viivaa.de Case Study - Fluinty</title>
     <link rel="icon" type="image/png" href="../assets/favicon.png">
 
     <!-- Fonts -->
@@ -63,11 +63,11 @@
             <div class="flex items-center gap-8">
                 <a href="../index.html#case-studies"
                     class="text-sm font-medium text-gray-700 hover:text-gray-900 transition-colors flex items-center gap-2">
-                    <i data-lucide="arrow-left" class="w-4 h-4"></i> Powrót
+                    <i data-lucide="arrow-left" class="w-4 h-4"></i> Back
                 </a>
-                <a href="../en/pages/case-study-art-tim.html"
-                    class="flex items-center gap-2 transition-transform hover:scale-110" aria-label="Switch to English">
-                    <img src="../assets/flags/en.svg" alt="EN" class="w-6 h-auto rounded-sm shadow-sm">
+                <a href="../../pages/case-study-viivaa.html"
+                    class="flex items-center gap-2 transition-transform hover:scale-110" aria-label="Switch to Polish">
+                    <img src="../../assets/flags/pl.svg" alt="PL" class="w-6 h-auto rounded-sm shadow-sm">
                 </a>
             </div>
         </div>
@@ -77,7 +77,7 @@
     <section class="relative min-h-[60vh] flex items-center justify-center pt-20 overflow-hidden">
         <div class="absolute inset-0 z-0">
             <div
-                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
+                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
             </div>
             <div class="absolute inset-0 bg-gradient-to-t from-background via-background/80 to-transparent"></div>
         </div>
@@ -85,17 +85,16 @@
         <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
             <div
                 class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-accent/10 border border-accent/20 mb-8 backdrop-blur-sm">
-                <span class="text-sm font-bold text-accent uppercase tracking-wider">Logistyka</span>
+                <span class="text-sm font-bold text-accent uppercase tracking-wider">Recruitment / HR</span>
             </div>
 
             <h1 class="text-4xl md:text-6xl font-display font-bold tracking-tight mb-6 leading-tight">
-                Automatyzacja Zarządzania Flotą dla Art-Tim
+                AI Job Search Assistant for Viivaa.de
             </h1>
 
             <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                Dzięki zautomatyzowanemu systemowi zarządzania flotą udało się wyeliminować ryzyko kar za przegapione
-                terminy i niezgłoszone relokacje do ubezpieczyciela, zapewnić automatyczne powiadomienia o zmianach
-                lokalizacji oraz zaoszczędzić dziesiątki godzin miesięcznie.
+                A prototype MVP combining CV analysis, job matching, and voice interviews - comprehensive candidate
+                support in one tool.
             </p>
         </div>
     </section>
@@ -104,20 +103,20 @@
     <section class="py-12 border-y border-gray-200 bg-surface/30">
         <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
             <div>
-                <div class="text-4xl font-bold text-primary mb-2">100%</div>
-                <div class="text-sm text-gray-600">Kontroli nad flotą</div>
+                <div class="text-4xl font-bold text-primary mb-2">MVP</div>
+                <div class="text-sm text-gray-600">Fast implementation</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-accent">Auto</div>
-                <div class="text-sm text-gray-600">Powiadomienia</div>
+                <div class="text-4xl font-bold text-accent">AI Voice</div>
+                <div class="text-sm text-gray-600">Interview Simulation</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-secondary">0</div>
-                <div class="text-sm text-gray-600">Przegapionych terminów</div>
+                <div class="text-4xl font-bold text-secondary">100%</div>
+                <div class="text-sm text-gray-600">Analysis Automation</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-gray-900">$$$</div>
-                <div class="text-sm text-gray-600">Zabezpieczone finanse</div>
+                <div class="text-4xl font-bold text-gray-900">3in1</div>
+                <div class="text-sm text-gray-600">All-in-one tool</div>
             </div>
         </div>
     </section>
@@ -126,29 +125,41 @@
     <section class="py-24">
         <div class="max-w-4xl mx-auto px-6 space-y-24">
 
+            <!-- Client -->
+            <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
+                <h2 class="text-2xl font-display font-bold text-primary">About Client</h2>
+                <div>
+                    <p class="text-lg text-gray-700 leading-relaxed">
+                        Viivaa.de is an innovative recruitment platform with a mission to simplify the job search
+                        process. The company focuses on modern technologies to help candidates find the ideal job and
+                        prepare for interviews.
+                    </p>
+                </div>
+            </div>
+
             <!-- Challenge -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Challenge</h2>
                 <div class="space-y-6">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Brak centralnego systemu zarządzania flotą prowadził do chaosu informacyjnego i ryzyka
-                        finansowego.
+                        Candidates often feel lost in a plethora of job offers and stressed about interviews. Manually
+                        browsing ads and lack of practice opportunities are the main barriers.
                     </p>
                     <ul class="space-y-4">
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="map-pin" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="search" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Decentralizacja</h3>
-                                <p class="text-sm text-gray-600">Trudności w śledzeniu lokalizacji i stanu pojazdów
-                                    pomiędzy oddziałami.</p>
+                                <h3 class="font-bold mb-1">Time-consuming Search</h3>
+                                <p class="text-sm text-gray-600">Matching CVs to hundreds of offers takes candidates too
+                                    much time.</p>
                             </div>
                         </li>
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="file-warning" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="mic-off" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Luki w Ubezpieczeniach</h3>
-                                <p class="text-sm text-gray-600">Ryzyko przeoczenia terminów ubezpieczeń i przeglądów,
-                                    grożące wysokimi karami.</p>
+                                <h3 class="font-bold mb-1">Pre-interview Stress</h3>
+                                <p class="text-sm text-gray-600">Lack of interview simulation tools lowers candidates'
+                                    chances.</p>
                             </div>
                         </li>
                     </ul>
@@ -157,33 +168,34 @@
 
             <!-- Solution -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Rozwiązanie</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Solution</h2>
                 <div class="space-y-8">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Stworzyliśmy dedykowany system centralizujący zarządzanie flotą z automatycznymi
-                        powiadomieniami.
+                        We created an MVP prototype of an intelligent career assistant that supports the candidate at
+                        every stage.
                     </p>
 
                     <div class="relative border-l-2 border-accent/30 pl-8 space-y-12">
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">1. Centralna Baza Danych</h3>
-                            <p class="text-gray-600">Jeden system gromadzący wszystkie informacje o pojazdach.</p>
+                            <h3 class="text-xl font-bold mb-2">1. CV Analysis (AI Parsing)</h3>
+                            <p class="text-gray-600">The system automatically scans the candidate's CV, extracting key
+                                skills and experience to create a digital profile.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">2. Automatyczne Przypomnienia</h3>
-                            <p class="text-gray-600">System sam pilnuje terminów ubezpieczeń i przeglądów,
-                                wysyłając powiadomienia z wyprzedzeniem.</p>
+                            <h3 class="text-xl font-bold mb-2">2. Intelligent Matching</h3>
+                            <p class="text-gray-600">AI algorithms compare the candidate's profile with the job
+                                database, recommending only the best matches.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">3. Śledzenie Relokacji</h3>
-                            <p class="text-gray-600">Każda zmiana lokalizacji pojazdu jest rejestrowana, co zapewnia
-                                pełną transparentność.</p>
+                            <h3 class="text-xl font-bold mb-2">3. Voice Interview</h3>
+                            <p class="text-gray-600">An interactive AI voice module conducts simulated interviews,
+                                asking questions and providing feedback.</p>
                         </div>
                     </div>
                 </div>
@@ -191,22 +203,22 @@
 
             <!-- Results -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Rezultaty</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Results</h2>
                 <div>
                     <div class="p-8 rounded-3xl bg-gradient-to-br from-accent/20 to-primary/20 border border-gray-200">
-                        <h3 class="text-2xl font-bold mb-6">Bezpieczeństwo i Kontrola</h3>
+                        <h3 class="text-2xl font-bold mb-6">Candidate Support</h3>
                         <div class="space-y-6">
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Kontrola nad flotą</span>
-                                <span class="text-xl font-bold text-green-600">100%</span>
+                                <span>MVP implementation time</span>
+                                <span class="text-xl font-bold text-green-600">3 days</span>
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Ryzyko kar finansowych</span>
-                                <span class="text-xl font-bold text-green-600">0%</span>
+                                <span>Candidate confidence increase</span>
+                                <span class="text-xl font-bold text-green-600">60%</span>
                             </div>
                             <div class="flex items-center justify-between">
-                                <span>Oszczędność czasu</span>
-                                <span class="text-xl font-bold text-green-600">~40h / msc</span>
+                                <span>Offer matching accuracy</span>
+                                <span class="text-xl font-bold text-green-600">87%</span>
                             </div>
                         </div>
                     </div>
@@ -221,31 +233,31 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Previous -->
-                <a href="case-study-eticod.html"
+                <a href="case-study-pups-choice.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
                     <div
                         class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
                         <i data-lucide="arrow-left"
                             class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
-                        Poprzednia realizacja
+                        Previous case study
                     </div>
                     <h3
                         class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
-                        Eticod</h3>
+                        Pup's Choice</h3>
                 </a>
 
                 <!-- Next -->
-                <a href="case-study-pups-choice.html"
+                <a href="case-study-eticod.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
                     <div
                         class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
-                        Następna realizacja
+                        Next case study
                         <i data-lucide="arrow-right"
                             class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
                     </div>
                     <h3
                         class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
-                        Pup's Choice</h3>
+                        Eticod</h3>
                 </a>
             </div>
         </div>
@@ -258,7 +270,7 @@
         </div>
     </footer>
 
-    <script src="../js/main.js"></script>
+    <script src="../../js/main.js"></script>
     <script>
         lucide.createIcons();
     </script>
