--- a/pages/case-study-pups-choice.html
+++ b/pages/case-study-pups-choice.html
@@ -65,6 +65,10 @@
                     class="text-sm font-medium text-gray-700 hover:text-gray-900 transition-colors flex items-center gap-2">
                     <i data-lucide="arrow-left" class="w-4 h-4"></i> Powrót
                 </a>
+                <a href="../en/pages/case-study-pups-choice.html"
+                    class="flex items-center gap-2 transition-transform hover:scale-110" aria-label="Switch to English">
+                    <img src="../assets/flags/en.svg" alt="EN" class="w-6 h-auto rounded-sm shadow-sm">
+                </a>
             </div>
         </div>
     </nav>
