--- a/en/pages/case-study-eticod.html
+++ b/en/pages/case-study-eticod.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art-Tim Case Study - Flu inty</title>
+    <title>Eticod Case Study - Fluinty</title>
     <link rel="icon" type="image/png" href="../assets/favicon.png">
 
     <!-- Fonts -->
@@ -63,11 +63,11 @@
             <div class="flex items-center gap-8">
                 <a href="../index.html#case-studies"
                     class="text-sm font-medium text-gray-700 hover:text-gray-900 transition-colors flex items-center gap-2">
-                    <i data-lucide="arrow-left" class="w-4 h-4"></i> Powrót
+                    <i data-lucide="arrow-left" class="w-4 h-4"></i> Back
                 </a>
-                <a href="../en/pages/case-study-art-tim.html"
-                    class="flex items-center gap-2 transition-transform hover:scale-110" aria-label="Switch to English">
-                    <img src="../assets/flags/en.svg" alt="EN" class="w-6 h-auto rounded-sm shadow-sm">
+                <a href="../../pages/case-study-eticod.html"
+                    class="flex items-center gap-2 transition-transform hover:scale-110" aria-label="Switch to Polish">
+                    <img src="../../assets/flags/pl.svg" alt="PL" class="w-6 h-auto rounded-sm shadow-sm">
                 </a>
             </div>
         </div>
@@ -77,26 +77,24 @@
     <section class="relative min-h-[60vh] flex items-center justify-center pt-20 overflow-hidden">
         <div class="absolute inset-0 z-0">
             <div
-                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
+                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
             </div>
             <div class="absolute inset-0 bg-gradient-to-t from-background via-background/80 to-transparent"></div>
         </div>
 
         <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
             <div
-                class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-accent/10 border border-accent/20 mb-8 backdrop-blur-sm">
-                <span class="text-sm font-bold text-accent uppercase tracking-wider">Logistyka</span>
+                class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-primary/10 border border-primary/20 mb-8 backdrop-blur-sm">
+                <span class="text-sm font-bold text-primary uppercase tracking-wider">Printing</span>
             </div>
 
             <h1 class="text-4xl md:text-6xl font-display font-bold tracking-tight mb-6 leading-tight">
-                Automatyzacja Zarządzania Flotą dla Art-Tim
+                Order Processing Automation for Eticod sp. z o.o.
             </h1>
 
             <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                Dzięki zautomatyzowanemu systemowi zarządzania flotą udało się wyeliminować ryzyko kar za przegapione
-                terminy i niezgłoszone relokacje do ubezpieczyciela, zapewnić automatyczne powiadomienia o zmianach
-                lokalizacji oraz zaoszczędzić dziesiątki godzin miesięcznie.
-            </p>
+                The automated order processing system eliminated manual work, saving hundreds of hours monthly and
+                significantly reducing operational errors.</p>
         </div>
     </section>
 
@@ -104,20 +102,20 @@
     <section class="py-12 border-y border-gray-200 bg-surface/30">
         <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
             <div>
-                <div class="text-4xl font-bold text-primary mb-2">100%</div>
-                <div class="text-sm text-gray-600">Kontroli nad flotą</div>
+                <div class="text-4xl font-bold text-primary mb-2">~160h</div>
+                <div class="text-sm text-gray-600">Saved monthly</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-accent">Auto</div>
-                <div class="text-sm text-gray-600">Powiadomienia</div>
+                <div class="text-4xl font-bold text-accent">0</div>
+                <div class="text-sm text-gray-600">Data errors</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-secondary">0</div>
-                <div class="text-sm text-gray-600">Przegapionych terminów</div>
+                <div class="text-4xl font-bold text-secondary">24/7</div>
+                <div class="text-sm text-gray-600">System uptime</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-gray-900">$$$</div>
-                <div class="text-sm text-gray-600">Zabezpieczone finanse</div>
+                <div class="text-4xl font-bold text-gray-900">Real-time</div>
+                <div class="text-sm text-gray-600">Data inconsistency detection</div>
             </div>
         </div>
     </section>
@@ -126,29 +124,42 @@
     <section class="py-24">
         <div class="max-w-4xl mx-auto px-6 space-y-24">
 
+            <!-- Client -->
+            <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
+                <h2 class="text-2xl font-display font-bold text-primary">About Client</h2>
+                <div>
+                    <p class="text-lg text-gray-700 leading-relaxed">
+                        Eticod is a leader in the printing industry with 30 years of experience. They specialize in
+                        modern flexographic and digital printing, processing thousands of orders monthly. As an
+                        innovation-driven company, they sought a way to streamline the order intake process.
+                    </p>
+                </div>
+            </div>
+
             <!-- Challenge -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Challenge</h2>
                 <div class="space-y-6">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Brak centralnego systemu zarządzania flotą prowadził do chaosu informacyjnego i ryzyka
-                        finansowego.
+                        Dozens of orders processed manually every day. Retyping data, verification, entering into ERP -
+                        hours of repetitive work.
                     </p>
                     <ul class="space-y-4">
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="map-pin" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="x-circle" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Decentralizacja</h3>
-                                <p class="text-sm text-gray-600">Trudności w śledzeniu lokalizacji i stanu pojazdów
-                                    pomiędzy oddziałami.</p>
+                                <h3 class="font-bold mb-1">Time Loss</h3>
+                                <p class="text-sm text-gray-600">Hundreds of hours monthly spent on data entry alone.
+                                </p>
                             </div>
                         </li>
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="file-warning" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="alert-octagon" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Luki w Ubezpieczeniach</h3>
-                                <p class="text-sm text-gray-600">Ryzyko przeoczenia terminów ubezpieczeń i przeglądów,
-                                    grożące wysokimi karami.</p>
+                                <h3 class="font-bold mb-1">Error Risk</h3>
+                                <p class="text-sm text-gray-600">Every error, even the smallest, triggers a chain of
+                                    consequences - time spent detecting the problem, finding the source, correcting in
+                                    the system, and verifying.</p>
                             </div>
                         </li>
                     </ul>
@@ -157,33 +168,32 @@
 
             <!-- Solution -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Rozwiązanie</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Solution</h2>
                 <div class="space-y-8">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Stworzyliśmy dedykowany system centralizujący zarządzanie flotą z automatycznymi
-                        powiadomieniami.
+                        We implemented an intelligent AI agent that took control of the order process.
                     </p>
 
-                    <div class="relative border-l-2 border-accent/30 pl-8 space-y-12">
+                    <div class="relative border-l-2 border-primary/30 pl-8 space-y-12">
                         <div class="relative">
                             <span
-                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">1. Centralna Baza Danych</h3>
-                            <p class="text-gray-600">Jeden system gromadzący wszystkie informacje o pojazdach.</p>
+                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
+                            <h3 class="text-xl font-bold mb-2">1. Monitoring</h3>
+                            <p class="text-gray-600">The system automatically scans the inbox for new orders.</p>
                         </div>
                         <div class="relative">
                             <span
-                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">2. Automatyczne Przypomnienia</h3>
-                            <p class="text-gray-600">System sam pilnuje terminów ubezpieczeń i przeglądów,
-                                wysyłając powiadomienia z wyprzedzeniem.</p>
+                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
+                            <h3 class="text-xl font-bold mb-2">2. Data Extraction</h3>
+                            <p class="text-gray-600">Advanced algorithms extract key information from email content and
+                                attachments.</p>
                         </div>
                         <div class="relative">
                             <span
-                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">3. Śledzenie Relokacji</h3>
-                            <p class="text-gray-600">Każda zmiana lokalizacji pojazdu jest rejestrowana, co zapewnia
-                                pełną transparentność.</p>
+                                class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
+                            <h3 class="text-xl font-bold mb-2">3. Validation and Integration</h3>
+                            <p class="text-gray-600">Data is validated for correctness and then automatically entered
+                                into the ERP system.</p>
                         </div>
                     </div>
                 </div>
@@ -191,22 +201,22 @@
 
             <!-- Results -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">Rezultaty</h2>
+                <h2 class="text-2xl font-display font-bold text-primary">Results</h2>
                 <div>
-                    <div class="p-8 rounded-3xl bg-gradient-to-br from-accent/20 to-primary/20 border border-gray-200">
-                        <h3 class="text-2xl font-bold mb-6">Bezpieczeństwo i Kontrola</h3>
+                    <div class="p-8 rounded-3xl bg-gradient-to-br from-primary/20 to-accent/20 border border-gray-200">
+                        <h3 class="text-2xl font-bold mb-6">Business Transformation</h3>
                         <div class="space-y-6">
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Kontrola nad flotą</span>
-                                <span class="text-xl font-bold text-green-600">100%</span>
+                                <span>Time savings</span>
+                                <span class="text-xl font-bold text-green-600">~160h / mo</span>
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Ryzyko kar finansowych</span>
-                                <span class="text-xl font-bold text-green-600">0%</span>
+                                <span>Entry errors</span>
+                                <span class="text-xl font-bold text-green-600">0</span>
                             </div>
                             <div class="flex items-center justify-between">
-                                <span>Oszczędność czasu</span>
-                                <span class="text-xl font-bold text-green-600">~40h / msc</span>
+                                <span>Order response time</span>
+                                <span class="text-xl font-bold text-green-600">Instant</span>
                             </div>
                         </div>
                     </div>
@@ -221,31 +231,31 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Previous -->
-                <a href="case-study-eticod.html"
+                <a href="case-study-viivaa.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
                     <div
                         class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
                         <i data-lucide="arrow-left"
                             class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
-                        Poprzednia realizacja
+                        Previous case study
                     </div>
                     <h3
                         class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
-                        Eticod</h3>
+                        Viivaa.de</h3>
                 </a>
 
                 <!-- Next -->
-                <a href="case-study-pups-choice.html"
+                <a href="case-study-art-tim.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
                     <div
                         class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
-                        Następna realizacja
+                        Next case study
                         <i data-lucide="arrow-right"
                             class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
                     </div>
                     <h3
                         class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
-                        Pup's Choice</h3>
+                        Art-Tim</h3>
                 </a>
             </div>
         </div>
@@ -258,7 +268,7 @@
         </div>
     </footer>
 
-    <script src="../js/main.js"></script>
+    <script src="../../js/main.js"></script>
     <script>
         lucide.createIcons();
     </script>
